--- a/app.json
+++ b/app.json
@@ -44,7 +44,7 @@
     },
     "UPDATE_CHANNEL": {
       "description": "For Force Subscribe. Paste your Update channel USERNAME (without @)..",
-      "value": "",
+      "value": "ZOLE_LOG_CHANNEL",
       "required": false
     },
     "SESSION_NAME": {
